-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
After regenerating TestMismatchHandling.jcod we get some spurious NullPointerException when running TestMismatchHandling.java such as
java.lang.NullPointerException: Cannot invoke "MyValue7.verify()" because "<parameter1>" is null
at Q.method(TestMismatchHandlingGenerator.java:273)
at TestMismatchHandlingHelper.test8(TestMismatchHandlingGenerator.java:417)
at TestMismatchHandling.main(TestMismatchHandling.java:188)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at com.sun.javatest.regtest.agent.MainWrapper$MainTask.run(MainWrapper.java:138)
at java.base/java.lang.Thread.run(Thread.java:1474)
or
java.lang.NullPointerException: Cannot invoke "compiler.valhalla.inlinetypes.MyValue3_MismatchHandlingHelper.verify()" because "<parameter1>" is null
at compiler.valhalla.inlinetypes.J.method(TestMismatchHandlingGenerator.java:201)
at compiler.valhalla.inlinetypes.TestMismatchHandlingHelper.test3(TestMismatchHandlingGenerator.java:360)
at compiler.valhalla.inlinetypes.TestMismatchHandling.main(TestMismatchHandling.java:159)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at com.sun.javatest.regtest.agent.MainWrapper$MainTask.run(MainWrapper.java:138)
at java.base/java.lang.Thread.run(Thread.java:1474)
with flag -XX:+DeoptimizeNMethodBarriersALot
java.lang.NullPointerException: Cannot invoke "MyValue7.verify()" because "<parameter1>" is null
at Q.method(TestMismatchHandlingGenerator.java:273)
at TestMismatchHandlingHelper.test8(TestMismatchHandlingGenerator.java:417)
at TestMismatchHandling.main(TestMismatchHandling.java:188)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at com.sun.javatest.regtest.agent.MainWrapper$MainTask.run(MainWrapper.java:138)
at java.base/java.lang.Thread.run(Thread.java:1474)
or
java.lang.NullPointerException: Cannot invoke "compiler.valhalla.inlinetypes.MyValue3_MismatchHandlingHelper.verify()" because "<parameter1>" is null
at compiler.valhalla.inlinetypes.J.method(TestMismatchHandlingGenerator.java:201)
at compiler.valhalla.inlinetypes.TestMismatchHandlingHelper.test3(TestMismatchHandlingGenerator.java:360)
at compiler.valhalla.inlinetypes.TestMismatchHandling.main(TestMismatchHandling.java:159)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at com.sun.javatest.regtest.agent.MainWrapper$MainTask.run(MainWrapper.java:138)
at java.base/java.lang.Thread.run(Thread.java:1474)
with flag -XX:+DeoptimizeNMethodBarriersALot
- blocks
-
JDK-8368988 [lworld] Rename classes in valhalla/inlinetypes to be distinct
-
- Resolved
-
- relates to
-
JDK-8375547 [lworld] Dependency verification fails with assert "Should have been marked for deoptimization"
-
- Resolved
-
- links to
-
Commit(lworld)
openjdk/valhalla/2da79ac2
-
Review(lworld)
openjdk/valhalla/1677