8369185: [lworld] Wrong execution in TestMismatchHandling after regenerating TestMismatchHandling.jcod

Reviewed-by: thartmann